--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.782.0",
+    "@aws-sdk/s3-request-presigner": "^3.782.0",
+    "bullmq": "^5.47.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.13.1"
+    "mongoose": "^8.13.1",
+    "multer": "^1.4.5-lts.2",
+    "sharp": "^0.34.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
