--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.782.0",
     "@aws-sdk/s3-request-presigner": "^3.782.0",
+    "axios": "^1.8.4",
     "bullmq": "^5.47.1",
     "collage_generator": "file:",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "ioredis": "^5.6.0",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.2",
     "sharp": "^0.34.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.14.0",
     "@typescript-eslint/eslint-plugin": "^8.29.0",
     "@typescript-eslint/parser": "^8.29.0",
