--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "ioredis": "^5.6.0",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.2",
+    "node-cron": "^3.0.3",
     "sharp": "^0.34.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.14.0",
+    "@types/node-cron": "^3.0.11",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.29.0",
     "@typescript-eslint/parser": "^8.29.0",
