--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/app.js",
-    "dev": "nodemon --ext ts --exec ts-node src/server.ts",
+    "dev": "nodemon --ext ts --exec ts-node server.ts",
     "lint": "eslint src --fix",
     "format": "prettier --write src"
   },
