--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,16 @@
     "target": "ES2022",
     "module": "CommonJS",
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",                   
     "removeComments": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true,        
-    "moduleResolution": "node",       
-    "allowSyntheticDefaultImports": true 
+    "resolveJsonModule": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "app.ts", "server.ts"],
   "exclude": ["node_modules", "dist"]
 }
