--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/app.js",
+    "start": "node dist/server.js",
     "dev": "nodemon --ext ts --exec ts-node server.ts",
     "lint": "eslint src --fix",
     "format": "prettier --write src"
@@ -19,7 +19,6 @@
     "@aws-sdk/s3-request-presigner": "^3.782.0",
     "axios": "^1.8.4",
     "bullmq": "^5.47.2",
-    "collage_generator": "file:",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "ioredis": "^5.6.0",
