--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "allowJs": true
+
   },
   "include": ["src/**/*", "app.ts", "server.ts"],
   "exclude": ["node_modules", "dist"]
