--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
     "@aws-sdk/s3-request-presigner": "^3.782.0",
     "axios": "^1.8.4",
     "bullmq": "^5.47.2",
-    "collage_generator": "file:",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "ioredis": "^5.6.0",
     "mongoose": "^8.13.1",
-    "multer": "^1.4.5-lts.2",
+    "multer": "^2.0.1",
     "node-cron": "^3.0.3",
     "sharp": "^0.34.0"
   },
